--- a/style.css
+++ b/style.css
@@ -67,3 +67,14 @@ main section {
     width: 100%;
     height: 15px;
 }
+
+@media only screen and (max-width: 600px) {
+    main {
+        gap: 0px;
+        flex-direction: column;
+    }
+    main section {
+        width: 90%;
+        margin: 10px 0;
+    }
+}
